--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "optimize:html": "html-minifier-terser --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --minify-css true --minify-js true -o dist/index.html index.html",
     "optimize:css": "cleancss -o dist/styles.css styles.css",
     "optimize:js": "uglifyjs script.js -o dist/script.js -c -m",
-    "serve": "npx http-server dist"
+    "serve": "npx http-server . -c-1"
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,17 @@
     "url": "https://github.com/pdarleyjr/IPLC-Eval/issues"
   },
   "homepage": "https://pdarleyjr.github.io/IPLC-Eval",
+  "dependencies": {
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
+    "@tensorflow/tfjs": "^4.17.0",
+    "idb": "^8.0.0",
+    "node-fetch": "^2.7.0"
+  },
   "devDependencies": {
     "clean-css-cli": "^5.6.2",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.31.0",
     "html-minifier-terser": "^7.2.0",
     "http-server": "^14.1.1",
     "uglify-js": "^3.17.4"
